--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,103 @@
-:root{
-    --color-primary-light:#ffffff;
+@font-face {
+    font-display: swap;
+    font-family: 'Play';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/play-v19-cyrillic_latin/play-v19-cyrillic_latin-regular.woff2') format('woff2');
 }
+
+@font-face {
+    font-display: swap;
+    font-family: 'Play';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/play-v19-cyrillic_latin/play-v19-cyrillic_latin-700.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/roboto-v30-cyrillic_latin/roboto-v30-cyrillic_latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/roboto-v30-cyrillic_latin/roboto-v30-cyrillic_latin-700.woff2') format('woff2');
+}
+
+:root{
+    --color-primary-1:#ffffff;
+    --color-primary-2:#2B7FFF;
+    --color-primary-3:#011C44;
+    --color-secondary-1:#4A4A4A;
+    --color-secondary-2:#747272;
+    --color-secondary-3:#011F4A;
+    --color-secondary-4:#FFD02B;
+}
+
+body{
+    color: var(--color-primary-3);
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: normal;
+}
+
+/* Header */
+
+ul{
+    list-style-type: none;
+}
+
+.link{
+    color: var(--color-primary-3);
+    text-decoration: none;
+}
+
+.link:hover{
+    color: var(--color-primary-2);
+}
+
+/* Main section */
+
+.main-title{
+    color: var(--color-primary-2);
+    font-family: 'Play', sans-serif;
+    font-size: 140px;
+    font-weight: 700;
+    line-height: 0.8;
+    text-transform: capitalize;
+}
+
+.main-button{
+    background-color: var(--color-primary-2);
+    border-radius: 32px;
+    color: var(--color-primary-1);
+    font-weight: 600;
+}
+
+.main-text{
+    color: var(--color-secondary-1);
+    font-size: 12px;
+    line-height: 1.5;
+}
+
+/* Publicity section */
+
+.section-title{
+    font-family: 'Play', sans-serif;
+    font-size: 64px;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.section-title .beauty{
+    color: var(--color-primary-2);
+    text-transform: capitalize;
+}
+
