--- a/css/styles.css
+++ b/css/styles.css
@@ -76,9 +76,15 @@ ul{
 
 .main-button{
     background-color: var(--color-primary-2);
+    border: 2px solid var(--color-primary-2);
     border-radius: 32px;
     color: var(--color-primary-1);
     font-weight: 600;
+}
+
+.main-button:hover{
+    background-color: transparent;
+    color: var(--color-primary-3);
 }
 
 .main-text{
@@ -96,8 +102,64 @@ ul{
     line-height: normal;
 }
 
-.section-title .beauty{
+.publicity-title{
     color: var(--color-primary-2);
     text-transform: capitalize;
 }
 
+
+.publicity-text{
+    font-size: 22px;
+    line-height: 1.7;
+}
+
+.publicity-text span{
+    font-weight: 600;
+    text-transform: capitalize;
+}
+
+/* Selection section */
+
+.selection-title{
+    color: var(--color-primary-2);
+}
+
+.selection-article{
+    color: #000000;
+    line-height: 1.3;
+}
+
+/* Procedure section */
+
+.procedure-title{
+    color: var(--color-primary-2);
+}
+
+/* Find section */
+
+.find-title{
+    color: var(--color-primary-2);
+}
+
+/* Footer */
+
+footer{
+    background-color: var(--color-primary-3);
+}
+
+address{
+    font-style: normal;
+}
+
+.footer-link{
+    color: var(--color-primary-1);
+    font-size: 16px;
+    line-height: 1.17;
+    text-decoration: none;
+}
+
+.copyright{
+    color: var(--color-secondary-2);
+    font-size: 13px;
+    line-height: 1.17;
+}
